Bugfix: captures are now not fixed height but only fixed min-height to avoid overlapping when capture is too long.

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -145,8 +145,8 @@ page-home {
 		margin-left: 0px;
 	}
 
-	.height-30px {
-		height: 30px;
+	.min-height-30px {
+		min-height: 30px;
 	}
 
 	.margin-bottom-1 {
